--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ packaging==23.2
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyMySQL==1.1.0
+python-decouple==3.8
 SQLAlchemy==2.0.23
 typing_extensions==4.8.0
 Werkzeug==3.0.1
+gunicorn==20.1.0
